<resources>
    <string name="app_name">TB</string>
    <!--Text-->
    <string name="text_match">Match</string>
    <string name="text_street">Street Basketball</string>
    <string name="text_bullfighting">1 vs 1</string>
    <string name="text_tec_total">Tec Total</string>
    <string name="text_match_manager">Match Manager</string>
    <string name="text_team_manager">Team Manager</string>
    <string name="text_player_manager">Player Manager</string>
    <string name="text_team_name">Team Name</string>
    <string name="text_into_manager_player">Go to Player Manager</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_choose_team">Choose Team</string>
    <string name="text_player_name">Player Name</string>
    <string name="text_team_position">Team Position</string>
    <string name="text_edit">Edit</string>
    <string name="text_delete">Delete</string>
    <!--Action-->
    <string name="action_submit">Submit</string>
    <!--Attention-->
    <string name="attention_team_name">Please Input Team Name</string>
    <string name="attention_loading_data">Loading…</string>
    <string name="attention_sending_data">Send…</string>
    <string name="attention_tName_empty">Team is empty</string>
    <string name="attention_team_is_empty">Team is empty</string>
    <string name="attention_please_input">Please Input</string>
    <string name="text_team_number">Number</string>
    <string name="attention_name_is_empty">Name is empty</string>
    <string name="attention_num_is_empty">Num is empty</string>
    <string name="attention_role_is_empty">Role is empty</string>
    <string name="attention_save_player_error">Save Error</string>
    <string name="attention_save_success">Save Success</string>
    <string name="attention_loading_data_error">Load Data Error</string>
    <string name="attention_delete_data">Is being deleted</string>
    <string name="attention_fail">Action Fail</string>
    <string name="attention_success">Action Success</string>
    <string name="attention_tName_is_existed">Team name is existed</string>
    <string name="text_entry_tecTotal">Entry Tec total</string>
    <string name="text_home_team">Home Team</string>
    <string name="text_visiting_team">Visiting Team</string>
    <string name="text_vs">VS</string>
    <string name="attention_select_same_team">Same team is error</string>
    <string name="text_state_conversion">Att to Def</string>
</resources>
