<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.xunuosi.tb.view.activity.HomeActivity">

    <TextView
        android:id="@+id/tv_match"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:text="@string/text_match"
        android:background="@drawable/btn_background"
        android:gravity="center"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_street"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/tv_street"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:layout_marginTop="261dp"
        android:background="@drawable/btn_background"
        android:gravity="center"
        android:text="@string/text_street"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_bull"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:background="@drawable/btn_background"
        android:gravity="center"
        android:text="@string/text_bullfighting"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_street"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

</android.support.constraint.ConstraintLayout>
