<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/layout_toolbar"/>
    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/btn_cb_entry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/text_entry_tecTotal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="96dp"
        app:layout_constraintTop_toBottomOf="@+id/sp_cb_visitingTeam" />

    <Button
        android:id="@+id/btn_cb_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/text_cancel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cb_entry" />

    <TextView
        android:id="@+id/tv_empty_ht"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_home_team"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="64dp"
        style="@style/text_interface"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_empty_vt"
        style="@style/text_interface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:text="@string/text_visiting_team"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="134dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_empty_ht"
        android:layout_marginStart="32dp" />

    <Spinner
        android:id="@+id/sp_cb_homeTeam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="32dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_empty_ht"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintHorizontal_bias="0.0" />

    <Spinner
        android:id="@+id/sp_cb_visitingTeam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="132dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/tv_empty_vt"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_cb_homeTeam" />

    <TextView
        android:id="@+id/tv_cb_empty_vs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="66dp"
        android:layout_marginTop="66dp"
        android:text="@string/text_vs"
        app:layout_constraintBottom_toTopOf="@+id/sp_cb_visitingTeam"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_cb_homeTeam"
        style="@style/text_interface"
        android:textColor="@color/colorDarkRed"/>


</android.support.constraint.ConstraintLayout>