<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/empty_match_view1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorGray"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintVertical_bias="0.501"
        app:layout_constraintLeft_toRightOf="@+id/empty_match_view2"
        android:layout_marginLeft="0dp"
        app:layout_constraintHorizontal_bias="0.0"/>

    <View
        android:id="@+id/empty_match_view2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="0dp"/>

    <TextView
        android:id="@+id/tv_match_changeBtn"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/text_state_conversion"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/empty_match_view2"
        style="@style/text_interface"
        android:background="@drawable/btn_background"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_match_hTeamBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/text_home_team"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/empty_match_view1"
        android:layout_marginRight="16dp"
        style="@style/text_interface"
        android:background="@drawable/bg_hteam"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_match_changeBtn"/>

    <TextView
        android:id="@+id/tv_match_vTeamBtn"
        style="@style/text_interface"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg_vteam"
        android:text="@string/text_visiting_team"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/empty_match_view1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_match_changeBtn"/>
</android.support.constraint.ConstraintLayout>