<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <com.marshalchen.ultimaterecyclerview.swipe.SwipeLayout
        android:id="@+id/recyclerview_swipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="210dp"
            android:layout_height="92dp"
            android:background="@color/colorGray"
            android:gravity="center"
            android:tag="Bottom3"
            android:weightSum="10">

            <Button
                android:id="@+id/btn_pm_swip_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/text_edit"
                android:textColor="#fff"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/btn_pm_swip_delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/text_delete"
                android:textColor="#FF5534"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_pm_swip_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_selector"
            android:clickable="true"
            android:orientation="horizontal">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="25dp">

                <ImageView
                    android:id="@+id/iv_item_swip_pm_avator"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/ic_circle_bg"
                    android:src="@drawable/ic_person_black_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/tv_item_swip_pm_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="36dp"
                    android:layout_marginLeft="29dp"
                    android:layout_marginStart="25dp"
                    android:text="@string/app_name"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/iv_item_swip_pm_avator"
                    tools:layout_constraintLeft_creator="1"/>

                <TextView
                    android:id="@+id/tv_item_swip_pm_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="36dp"
                    android:layout_marginEnd="141dp"
                    android:layout_marginRight="142dp"
                    android:text="TextView"
                    android:textColor="@color/colorGray"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:layout_constraintRight_creator="1"/>

                <TextView
                    android:id="@+id/tv_item_swip_pm_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="36dp"
                    android:layout_marginEnd="45dp"
                    android:layout_marginStart="38dp"
                    android:text="TextView"
                    android:textColor="@color/colorGray"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.447"
                    app:layout_constraintLeft_toRightOf="@+id/tv_item_swip_pm_num"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:layout_constraintLeft_creator="1"
                    tools:layout_constraintRight_creator="1"/>
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </com.marshalchen.ultimaterecyclerview.swipe.SwipeLayout>
</LinearLayout>

